--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    hola
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
