subiendo cambios en el head

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    <header></header>
+    <header>hola</header>
     <main></main>
     <footer></footer>
 </body>
