--- a/index.html
+++ b/index.html
@@ -5,10 +5,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>hola</header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav class="navegacion">
+            <a href="#"><img src="./img/logo.svg" alt="Logo sportit"></a>
+            <ul>
+                <li>Sports</li>
+                <li>Products</li>
+                <li>About Us</li>
+                <li>Trainning</li>
+                <li>Community</li>
+            </ul>
+            <img class="hamburguerMenu" src="./img/icon-hamburger.svg" alt="menu hamburguer">
+            <button class="botonInteractivo">Contact</button>
+        </nav>
+    </header>
+    <main>
+        <section class="primeraSeccion">
+            <img src="./img/padel-intro.png" alt="persona jugando padel">
+            <div>
+                <h2>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free</h2>
+                <p>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
+                <button class="botonInteractivo">Contact</button>
+            </div>
+        </section>
+        <section class="segundaSeccion">
+            <h3>What´s different between pros?</h3>
+            <p>Manage provides all the functionality your<br> 
+                teas needs, without the complexity. Our software is<br>
+                tailor-made for modern digital product teams
+            </p>
+            <p class="loremText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</p>
+        </section>
+        <section class="terceraSeccion">
+            <article>
+                <h3><span>01</span> Track company-wide progress</h3>
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur 
+                    consequat augue. Nam tellus sem, tempus pellentesque 
+                    egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, 
+                    placerat quam eget, consequat dolor.
+                </p>
+            </article>
+            <article>
+                <h3><span>02</span> Advance built-in reports</h3>
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur 
+                    consequat augue. Nam tellus sem, tempus pellentesque 
+                    egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, 
+                    placerat quam eget, consequat dolor.
+                </p>
+            </article>
+            <article>
+                <h3><span>03</span> Everything you need in one place</h3>
+                <p>Donec elit est, mattis lacinia arcu eu, efficitur 
+                    consequat augue. Nam tellus sem, tempus pellentesque 
+                    egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, 
+                    placerat quam eget, consequat dolor.
+                </p>
+            </article>
+        </section>
+        <section class="cuartaSeccion">
+            <h2>Best of the month</h2>
+            <div class="contenedorDeCards">
+                <div class="card">
+                    <img src="./img/avatar-sanyo.png" alt="sanyo avatar">
+                    <span>Sanyo</span>
+                    <p>Etiam fermentum, nulla eget gravida cursus, purus lectus 
+                        feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius 
+                        natoque penatibus et magnis dis parturient montes, nascetur 
+                        ridiculus mus. 
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./img/avatar.lebron.png" alt="lebron avatar">
+                    <span>Lebron</span>
+                    <p>Etiam fermentum, nulla eget gravida cursus, purus lectus 
+                        feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius 
+                        natoque penatibus et magnis dis parturient montes, nascetur 
+                        ridiculus mus. 
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./img/avatar-navarro.png" alt="navarro avatar">
+                    <span>Navarro</span>
+                    <p>Etiam fermentum, nulla eget gravida cursus, purus lectus 
+                        feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius 
+                        natoque penatibus et magnis dis parturient montes, nascetur 
+                        ridiculus mus. 
+                    </p>
+                </div>
+            </div>
+            <button class="botonInteractivo">More</button>
+        </section>
+        <section class="quintaSeccion">
+            <h3>Get to know the best<br>
+                teams of the year
+            </h3>
+            <button class="botonInteractivo">Go for it</button>
+        </section>
+    </main>
+    <footer>
+        <div class="updateInbox">
+            <input type="text" placeholder="Update in your inbox...">
+            <button class="botonInteractivo">Go</button>
+        </div>
+        <nav class="navegacionFooter">
+            <ul>
+                <li>Home</li>
+                <li>Pricing</li>
+                <li>Products</li>
+                <li>About us</li>
+            </ul>
+            <ul>
+                <li>Trainning</li>
+                <li>Community</li>
+                <li>Privacy Policy</li>
+            </ul>
+        </nav>
+        <div class="redesSociales">
+            <ul>
+                <li><a href="https://facebook.com" target="_blank"><img src="./img/icon-facebook.svg" alt="facebook"></a></li>
+                <li><a href="https://youtube.com" target="_blank"><img src="./img/icon-youtube.svg" alt="youtube"></a></li>
+                <li><a href="https://twitter.com" target="_blank"><img src="./img/icon-twitter.svg" alt="twitter"></a></li>
+                <li><a href="https://pinterest.com" target="_blank"><img src="./img/icon-pinterest.svg" alt="pinterest"></a></li>
+                <li><a href="https://instagram.com" target="_blank"><img src="./img/icon-instagram.svg" alt="instagram"></a></li>
+            </ul>
+            <img src="./img/logoBlanco.svg" alt="logo sportit">
+        </div>
+        <p class="copyright">Copyright 2020. All Rights Reserved</p>
+    </footer>
 </body>
 </html>
