--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section class="terceraSeccion">
             <article>
-                <h3><span>01</span> Track company-wide progress</h3>
+                <h3 class="before01">Track company-wide progress</h3>
                 <p>Donec elit est, mattis lacinia arcu eu, efficitur 
                     consequat augue. Nam tellus sem, tempus pellentesque 
                     egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, 
@@ -49,7 +49,7 @@
                 </p>
             </article>
             <article>
-                <h3><span>02</span> Advance built-in reports</h3>
+                <h3 class="before02">Advance built-in reports</h3>
                 <p>Donec elit est, mattis lacinia arcu eu, efficitur 
                     consequat augue. Nam tellus sem, tempus pellentesque 
                     egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, 
@@ -57,7 +57,7 @@
                 </p>
             </article>
             <article>
-                <h3><span>03</span> Everything you need in one place</h3>
+                <h3 class="before03">Everything you need in one place</h3>
                 <p>Donec elit est, mattis lacinia arcu eu, efficitur 
                     consequat augue. Nam tellus sem, tempus pellentesque 
                     egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, 
